--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>康文昌的在线HTML 教学小工具</title>
+    <title>张世锟主页</title>
     <style>  
       body {
         margin: 0;
@@ -38,7 +38,7 @@
       font-size: 12px
     ">
     <p>我的网站</p>
-    <a href="https://zhangshikun.com/">友情链接</a>
+    <a href="https://www.100chui.com/resume/view/70e26fd7-b4b5-413e-a90c-6d5b60e4b1cd/">友情链接</a>
     </div>
   </body>
 </html>
